[package]
name = "actix_yew"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
reqwest = "0.12.5"
serde = "1.0.205"
serde_json = "1.0.122"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yew_form = "0.1.7"
