[package]
name = "actix_yew"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
gloo-net = { version="0.6.0", features = ["json"] }
gloo-utils = "0.2.0"
http = "1.1.0"
reqwasm = "0.5.0"
reqwest = {version="0.12.5", features = ["json", "blocking"]}
serde = "1.0.205"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.122"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-hooks = "0.3.2"
yew-router = { git = "https://github.com/yewstack/yew.git" }
yew_form = "0.1.7"
